[workspace]
resolver = "2"

members = [
    "injector",
    "payload",
    "generator",
    "reflective_loader", 
    "utils"
]

[profile.release]
opt-level = "z"     # Optimize for size, but also turn off loop vectorization.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[profile.dev]
opt-level = "z"     # Optimize for size, but also turn off loop vectorization.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

# More information about the profile attributes: https://doc.rust-lang.org/cargo/reference/profiles.html

